// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Se realizan pruebas sobre el componente principal GifExpertApp debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Saint Seiya"
      key="Saint Seiya"
    />
    <GifGrid
      category="Transformer"
      key="Transformer"
    />
  </ol>
</Fragment>
`;

exports[`Se realizan pruebas sobre el componente principal GifExpertApp debe generarse correctamente el componente <GifExpertApp /> 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
